[package]
name = "typora-img-to-base64"
version = "0.2.0"
edition = "2021"
authors = ["Hayden Chang <m831718@gmail.com>", "hayd1n"]
description = "Typora image to base64"
repository = "https://github.com/hayd1n/typora-img-to-base64"
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
base64 = "0.22"
html5ever = "0.29"
select = "0.6"
bytes = "1.7"
image = "0.25"
